2006-12-15  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpuimanager.[ch]: added new function
	gimp_ui_manager_activate_action() as a shortcut for looking up the
	action and activating it.

	* app/display/gimpdisplayshell-close.c
	* app/widgets/gimpcolormapeditor.c
	* app/widgets/gimpitemtreeview.c
	* app/widgets/gimppaletteeditor.c
	* app/widgets/gimptoolbox.c
	* app/widgets/gimptooloptionseditor.c: use the new function.

	* app/actions/file-commands.c
	* app/dialogs/file-save-dialog.c: minor code cleanup.

2006-12-14  Michael Natterer  <mitch@gimp.org>

	* app/actions/context-actions.c
	* app/actions/context-commands.[ch]: applied modified patch from
	David Gowers which adds brush spacing actions. Fixes bug #385679.

2006-12-14  Michael Natterer  <mitch@gimp.org>

	Applied slightly modified patch from David Gowers which abstracts
	away and unifies searching a color in a palette (bug #132146):

	* app/core/gimppalette.[ch]: added gimp_palette_find_entry().

	* app/widgets/gimpcolorselectorpalette.c
	* app/widgets/gimppaletteeditor.c: use it for selecting matching
	colors from the active palette.

2006-12-13  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/tinyscheme/scheme-private.h
	* plug-ins/script-fu/tinyscheme/scheme.c: Optimizations for string
	comparisons. Time spent in oblist_find_by_name() reduced by ~50%
	during startup by use of stored collation keys. Fixes bug #374854.

2006-12-13  Sven Neumann  <sven@gimp.org>

	* app/tools/tools-enums.[ch]: added missing define
	GIMP_TYPE_RECTANGLE_CONSTRAINT. Removed unused descriptions.

	* app/tools/gimprectangletool.c: made "constraint" an enum property.

2006-12-13  Øyvind Kolås  <pippin@gimp.org>

	* app/core/gimpprojection.h: indentation fix.

2006-12-12  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell.c: removed button reliefs to reduce
	visual clutter. Added tooltips to the menu and navigation buttons.

2006-12-12  Kevin Cozens  <kcozens@cvs.gnome.org>
